--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "tardis-node",
+  "name": "blockhead-node",
   "version": "1.0.0",
-  "description": "event sourcing (writer/reader) written in node",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "block chain toolset written in node",
+  "main": "app/app.js",
+  "directories": {
+    "example": "examples"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pocketmax/tardis-node.git"
+  "dependencies": {
+    "collections": "^1.2.4",
+    "promise": "^7.1.1",
+    "request": "^2.67.0",
+    "express": "^4.13.3"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pocketmax/tardis-node/issues"
-  },
-  "homepage": "https://github.com/pocketmax/tardis-node",
   "devDependencies": {
     "collections": "^1.2.4",
     "express": "^4.13.3",
     "promise": "^7.1.1",
     "request": "^2.67.0"
   },
-  "dependencies": {
-    "collections": "^1.2.4"
-  }
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pocketmax/blockhead-node.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pocketmax/blockhead-node/issues"
+  },
+  "homepage": "https://github.com/pocketmax/blockhead-node"
 }
