--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "dependencies": {
     "collections": "^1.2.4",
+    "express": "^4.13.3",
+    "lodash": "^4.16.2",
     "promise": "^7.1.1",
-    "request": "^2.67.0",
-    "express": "^4.13.3"
+    "request": "^2.67.0"
   },
   "devDependencies": {
     "collections": "^1.2.4",
     "express": "^4.13.3",
+    "lodash": "^4.16.2",
     "promise": "^7.1.1",
     "request": "^2.67.0"
   },
